# SpikingC

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Native/: SpikingC.##  main.#
include/: #Utility.h#  LIF.h  LIF.hpp  Linear.h  Linear.hpp  Model.h  Model.hpp  SNNconfig  SNNconfig.h  SNNconfig.hpp  Utility  Utility.h  Utility.hpp  fully_connected.hpp  leaky.hpp  linear_algebra.hpp  memory_access.hpp  network_config.hpp  snn.hpp
models/SNN_3L_simple_LIF_NMNIST/intermediate_output/: sample.csv
models/SNN_3L_simple_LIF_NMNIST/intermediate_output/fc1/: fc1_outputs_timestep_1.csv  fc1_outputs_timestep_10.csv  fc1_outputs_timestep_11.csv  fc1_outputs_timestep_12.csv  fc1_outputs_timestep_13.csv  fc1_outputs_timestep_14.csv  fc1_outputs_timestep_15.csv  fc1_outputs_timestep_16.csv  fc1_outputs_timestep_17.csv  fc1_outputs_timestep_18.csv  fc1_outputs_timestep_19.csv  fc1_outputs_timestep_2.csv  fc1_outputs_timestep_20.csv  fc1_outputs_timestep_21.csv  fc1_outputs_timestep_22.csv  fc1_outputs_timestep_23.csv  fc1_outputs_timestep_24.csv  fc1_outputs_timestep_25.csv  fc1_outputs_timestep_26.csv  fc1_outputs_timestep_27.csv  fc1_outputs_timestep_28.csv  fc1_outputs_timestep_29.csv  fc1_outputs_timestep_3.csv  fc1_outputs_timestep_30.csv  fc1_outputs_timestep_4.csv  fc1_outputs_timestep_5.csv  fc1_outputs_timestep_6.csv  fc1_outputs_timestep_7.csv  fc1_outputs_timestep_8.csv  fc1_outputs_timestep_9.csv
models/SNN_3L_simple_LIF_NMNIST/intermediate_output/fc2/: fc2_outputs_timestep_1.csv  fc2_outputs_timestep_10.csv  fc2_outputs_timestep_11.csv  fc2_outputs_timestep_12.csv  fc2_outputs_timestep_13.csv  fc2_outputs_timestep_14.csv  fc2_outputs_timestep_15.csv  fc2_outputs_timestep_16.csv  fc2_outputs_timestep_17.csv  fc2_outputs_timestep_18.csv  fc2_outputs_timestep_19.csv  fc2_outputs_timestep_2.csv  fc2_outputs_timestep_20.csv  fc2_outputs_timestep_23.csv  fc2_outputs_timestep_24.csv  fc2_outputs_timestep_25.csv  fc2_outputs_timestep_26.csv  fc2_outputs_timestep_27.csv  fc2_outputs_timestep_28.csv  fc2_outputs_timestep_29.csv  fc2_outputs_timestep_3.csv  fc2_outputs_timestep_30.csv  fc2_outputs_timestep_4.csv  fc2_outputs_timestep_5.csv  fc2_outputs_timestep_6.csv  fc2_outputs_timestep_7.csv  fc2_outputs_timestep_8.csv  fc2_outputs_timestep_9.csv
models/SNN_3L_simple_LIF_NMNIST/intermediate_output/fc3/: fc3_outputs_timestep_1.csv  fc3_outputs_timestep_11.csv  fc3_outputs_timestep_12.csv  fc3_outputs_timestep_13.csv  fc3_outputs_timestep_14.csv  (+18 more)
models/SNN_3L_simple_LIF_NMNIST/intermediate_outputs/: layer_outputs.json
models/SNN_3L_simple_LIF_NMNIST/intermediate_outputs_binary/: metadata.json
models/SNN_3L_simple_LIF_NMNIST/weights_and_bias/: README_WEIGHTS.md  fc1_bias.csv  fc2_bias.csv  fc2_weight_weights.csv  fc2_weights.csv  fc3_bias.csv  fc3_weight_weights.csv  fc3_weights.csv
models/SNN_3L_simple_LIF_NMNIST/weights_and_bias_binary/: metadata.json
models/SNN_3L_simple_LIF_NMNIST/weights_and_biases/: fc1_bias.csv  fc2_bias.csv  fc2_weight.csv  fc2_weights.csv  fc3_bias.csv  fc3_weight.csv  fc3_weights.csv
notebooks/: NMNIST_FC_snn_processing.ipynb  SNN_4L_simple_LIF_NMNIST.ipynb  convert_csv_to_bin.ipynb  custom_quantization.ipynb  mobileViT_training.py  prunning.ipynb  quantization.ipynb  save_weights_and_bias.ipynb  save_weights_and_bias_binary.ipynb  testing.ipynb
notebooks/tmp_models/: model_quantized.pth  snn_model.pth
src/: LIF.c  Linear.c  Model.c  SNNconfig.c  Utility.c  main.c  main.cpp  snn.cpp  snn.hpp
(+452 files in other folders)
